--- a/scss/common/_menu-panel.scss
+++ b/scss/common/_menu-panel.scss
@@ -111,13 +111,11 @@ div {
 }
 
 .search-menu {
-  input {
-    &[type='text'] {
-      @extend %text-field-box;
+  input[type='text'] {
+    @extend %text-field-box;
 
-      margin: 0;
-      width: 100%;
-    }
+    margin: 0;
+    width: 100%;
   }
 
   li:not(.category):not(.heading) {
