--- a/scss/common/_user-badge.scss
+++ b/scss/common/_user-badge.scss
@@ -162,7 +162,7 @@
 
   .avatar {
     height: ($font-size-base * $line-height-base * 2);
-    width: ($font-size-base * $line-height-base * 2)
+    width: ($font-size-base * $line-height-base * 2);
   }
 
   .user-detail {
