--- a/scss/common/_base-override.scss
+++ b/scss/common/_base-override.scss
@@ -20,42 +20,21 @@
   padding-left: 0;
 }
 
-.nav-pills {
+.nav-pills,
+%nav-pills {
   > li {
     margin-right: 1px;
 
-    &.active > a,
-    > a.active {
-      color: color-dynamic(unquote('$quaternary'));
-      opacity: 1;
-
-      body & {
-        @include focus-hover {
-          background-color: unquote('$quaternary');
-          color: color-dynamic(unquote('$quaternary'));
-
-          &::before {
-            opacity: 1;
-          }
-        }
-      }
-
-      &::before {
-        background-color: $btn-bg-overlay;
-        border-radius: $btn-border-radius;
-        content: '';
-        display: block;
-        opacity: 0;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-      }
+    &.active > a {
+      @extend %nav-pills-active;
     }
 
     > a {
       @extend %btn-flat;
+
+      &.active {
+        @extend %nav-pills-active;
+      }
 
       body & {
         display: block;
@@ -70,54 +49,57 @@
   }
 }
 
-.nav-stacked {
+%nav-pills-active {
+  color: color-dynamic(unquote('$quaternary'));
+  opacity: 1;
+
+  body & {
+    @include focus-hover {
+      background-color: unquote('$quaternary');
+      color: color-dynamic(unquote('$quaternary'));
+
+      &::before {
+        opacity: 1;
+      }
+    }
+  }
+
+  &::before {
+    background-color: $btn-bg-overlay;
+    border-radius: $btn-border-radius;
+    content: '';
+    display: block;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
+}
+
+.nav-stacked,
+%nav-stacked {
   background-color: transparent;
 
   li {
     border-bottom: 0;
 
-    &.active > a,
-    > a.active {
-      color: color-dynamic(unquote('$quaternary'));
-      opacity: 1;
-
-      body & {
-        @include focus-hover {
-          background-color: unquote('$quaternary;');
-          color: color-dynamic(unquote('$quaternary'));
-
-          &::before {
-            opacity: 1;
-          }
-        }
-      }
-
-      &::after {
-        display: none;
-      }
-
-      &::before {
-        background-color: $btn-bg-overlay;
-        border-radius: $btn-border-radius;
-        content: '';
-        display: block;
-        opacity: 0;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-      }
+    &.active > a {
+      @extend %nav-stacked-active;
     }
 
-    a {
+    > a {
       @extend %btn-flat;
+
+      &.active {
+        @extend %nav-stacked-active;
+      }
 
       body & {
         display: block;
         opacity: $nav-link-opacity;
         text-align: left;
-        text-align: start;
 
         @include focus-hover {
           background-color: transparent;
@@ -125,5 +107,38 @@
         }
       }
     }
+  }
+}
+
+%nav-stacked-active {
+  color: color-dynamic(unquote('$quaternary'));
+  opacity: 1;
+
+  body & {
+    @include focus-hover {
+      background-color: unquote('$quaternary;');
+      color: color-dynamic(unquote('$quaternary'));
+
+      &::before {
+        opacity: 1;
+      }
+    }
+  }
+
+  &::after {
+    display: none;
+  }
+
+  &::before {
+    background-color: $btn-bg-overlay;
+    border-radius: $btn-border-radius;
+    content: '';
+    display: block;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
   }
 }
