--- a/scss/common/_chip.scss
+++ b/scss/common/_chip.scss
@@ -5,11 +5,6 @@
   color: unquote('$primary');
   font-size: $font-size-small;
   padding: ($chip-padding-y / 2) ($chip-padding-x / 2);
-
-  &:focus,
-  &:hover {
-    color: unquote('$primary');
-  }
 }
 
 .badge-group {
@@ -33,8 +28,7 @@
   }
 
   &[href] {
-    &:focus,
-    &:hover {
+    @include focus-hover {
       box-shadow: $chip-box-shadow;
     }
 
