--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -25,8 +25,7 @@
       white-space: nowrap;
       width: ($header-height - $header-padding-y * 2);
 
-      &:focus,
-      &:hover {
+      @include focus-hover {
         background-color: color-chooser($header-item-overlay-dark, $header-item-overlay-light);
       }
 
@@ -65,14 +64,14 @@
     display: flex;
     margin: 0;
 
-    [class^='fa fa-'] {
-      height: auto;
-      width: auto;
-    }
-
     .badge-notification,
     .ring {
       top: ($chip-padding-y / -2);
+    }
+
+    .fa {
+      height: auto;
+      width: auto;
     }
 
     .icon {
@@ -87,8 +86,7 @@
       padding: 0;
       width: ($header-height - $header-padding-y * 2);
 
-      &:focus,
-      &:hover {
+      @include focus-hover {
         background-color: color-chooser($header-item-overlay-dark, $header-item-overlay-light);
         border: 0;
         color: inherit;
